# OPAUA

./: README.md  setup.txt
projects/method_server_01/: CMakeLists.txt
projects/method_server_02/: CMakeLists.txt
projects/monitor_server/: CMakeLists.txt
projects/monitor_server_01/: CMakeLists.txt
projects/simple2_sercli_cortex/: CMakeLists.txt
projects/simple2_sercli_x86/: CMakeLists.txt
projects/simple_cliser_01/: CMakeLists.txt
projects/simple_cliser_02/: CMakeLists.txt
projects/simple_sercli_cortex/: CMakeLists.txt
projects/simple_sercli_x86/: CMakeLists.txt
projects/src/: client.c  method_client_01.c  method_client_02.c  method_server_01.c  method_server_02.c  monitor_server.c  server.c  simple)client.c  simple_client.c  simple_client_01.c  simple_client_02.c  simple_server.c  simple_server2.c  simple_server_01.c
